--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="joke" class="joke">// Joke goes here</div>
       <button id="jokeBtn" class="btn">Get Another Joke</button>
       <audio id="audioplayer" src="laugh.wav"></audio>
+      <button id="speakBtn" class="btn">Speak Joke</button>
   </div>
     <script src="script.js"></script>
   </body>
